# organism

./: .gitignore  CONTRIBUTING.md  README.md
backend/: .dockerignore  .env.sample  .gitignore  AGENT.md  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/.notes/: datamodel_erd.mmd  datamodel_handoff.md  datamodel_tree.txt  learnings.md  memory.md  mentorship.md  service-refactor.md  tasks-to-pickup.md
backend/.notes/old-model-schemas-for-reference/models/: __init__.py  character.py  scene.py  story.py
backend/.notes/old-model-schemas-for-reference/schemas/: scene.py
backend/agents/: manager.py  manager_new.py  scriptwriter.py  types.py
backend/alembic/: env.py
backend/alembic/versions/: 15ebf715538f_add_stripe_events_table_for_raw_logging_.py  1831e46d4370_add_timestamps_to_story.py  1ae41d62182d_transition_state_from_jsonb_to_.py  20251115125248_convert_datetime_to_timezone_aware.py  3422c73da501_added_project_to_the_db.py  3c55f3bd4494_add_an_event_table.py  3f4b2c1d9a80_seed_live_pro_monthly_plan.py  446dd67bbfc8_add_canonical_render_id_to_panel.py  49f4ab84e6e6_migrate_image_table_to_polymorphic_.py  4d6f9e7c2a1b_add_livemode_to_stripe_mirrors.py  54a345ce08e5_adding_stripe_session_table.py  5b27713b4bda_add_google_oauth_account_table.py  600fb91bc05b_simplify_the_image_table_remove_.py  6028e3da1ef9_add_stripe_event_processing_state.py  785a31a45e57_create_users_table.py  79ef6688c75d_add_payment_plan_catalog.py  7b0c15f3f58d_scope_stripe_customers_by_livemode.py  8361aab32998_adding_stripe_customer.py  83cfc31b233c_add_subscription_invoice_and_.py  8988541b41a1_drop_project_state_column.py  9baf8f6a5cf0_change_story_user_input_text_from_array_.py  a60670590304_new_character_table_for_extraction.py  a65facc94664_adding_name_field_to_user_table.py  ae12d4aed74a_add_url_field_to_character_table.py  b18536562f7a_create_session_table.py  b5c95ec4495a_drop_unused_tables_character_story_.py  bdadece3a90f_add_edit_event_table_and_story_source_.py  c4f4431c3cd5_add_canonical_render_id_to_character.py  c7a266e72c18_add_cascade_deletes_to_fk_constraints.py  c7e01ef411e3_add_character_source_event_id.py  c9a0f7a4d6e3_scope_payment_plans_by_livemode.py  ca58279f826b_adding_stripe_schema_to_namespace_.py  ca8860cfc8dc_add_fields_to_image_table.py  cea593096780_simplify_image_table_use_variant_rather_.py  ced34aea1df9_change_table_name_and_all_references_.py  d0eed85a6b37_add_an_image_table.py  d85baa6a8985_remove_dummy_field.py  e3f9a12b7c41_add_name_description_to_story.py  e84a19f68b2d_scope_entitlements_by_livemode.py  f02ea0a1e56f_rename_stripe_customer_table_to_customer.py  (+1 more)
backend/core/: auth.py  config.py  event_queue.py  logging.py  observation.py  observation_manager.py  session.py  singleton.py
backend/core/api/: auth.py  comic_builder.py  errors.py  routers.py  transcribe.py
backend/core/auth/: AGENTS.md  __init__.py  config.py  dependencies.py  exceptions.py  manager.py  models.py  observability.py  router.py  schemas.py  types.py
backend/core/auth/api/: cookies.py  csrf.py  dependencies.py  errors.py  oauth_client.py  router.py
backend/core/auth/managers/: __init__.py  jwt.py  password.py  refresh.py  session.py  user.py
backend/core/auth/models/: auth_session.py  (+2 more)
backend/core/auth_v2/: AGENTS.md  __init__.py  config.py  exceptions.py  hashers.py  repository.py  router.py  schemas.py  service.py  tokens.py  utils.py
backend/core/comic_builder/: asset_manager.py  character_extractor.py  character_renderer.py  consolidated_state.py  dependencies.py  events.py  exceptions.py  models.py  panel_generator.py  project_state_manager.py  repository.py  router.py  schemas.py  service.py  simple_envelope_schema.py  state.py  state_manager.py
backend/core/common/: __init__.py  base_models.py  base_pydantic_model.py  clients.py  intelligence_models.py  utils.py
backend/core/config/: __init__.py  app.py  database.py
backend/core/events/: __init__.py  dispatcher.py  emitter.py  handler.py  models.py  repository.py  schemas.py  service.py
backend/core/infrastructure/: database.py  stripe_client.py
backend/core/payments/: __init__.py  dependencies.py  event_handler.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
backend/core/prompts/: loader.py  manager.yaml  prompt_repo.yaml
backend/core/services/: database.py
backend/core/sockets/: __init__.py  handlers.py
backend/core/storage/: google.py
backend/core/story_engine/: AGENT.md  events.py  exceptions.py  repository.py  service.py  state_manager.py  storage_keys.py
backend/core/universe/: events.py  timeline.py
backend/playground/: size.py
backend/scripts/: drain_stripe_events.py
backend/tests/: auth_helpers.py  conftest.py  test_auth_api.py  test_auth_cookies.py  test_auth_encryption.py  test_auth_repository.py  test_auth_tokens.py  test_auth_v2_api.py  test_auth_v2_encryption.py  test_auth_v2_repository.py  test_auth_v2_tokens.py  test_config.py  test_google_auth_api.py
backend/tests/payments/: test_billing_status_api.py  test_checkout_api.py  test_stripe_event_drainer.py  test_webhook_handlers.py
backend/tests/story_engine/: test_character_api.py  test_character_list_history_api.py  test_character_reference_image_delete.py  test_character_refine_smoke.py  test_character_render_edit_api.py  test_entitlement_guard_api.py  test_export_api.py  test_image_upload_service.py  test_panel_reference_image_api.py  test_panel_refine_api.py  test_panel_render_edit_api.py  test_pipeline_integration.py  test_projects_api.py  test_set_canonical_panel_render_api.py  test_set_canonical_render_api.py  test_storage_keys.py  test_story100_delete_project.py  test_story10_schema_foundation.py  test_story110_delete_panel.py  test_story120_character_renders.py  test_story20_generate_panels.py  test_story30_list_panels.py  test_story40_get_panel.py  test_story50_generate_panel.py  test_story60_render_panel.py  test_story70_panel_renders.py  test_story80_panel_history.py  test_story90_rename_project.py  test_story_api.py
(+588 files in other folders)
